# anpr

./: .gitignore  CMakeLists.txt  README.md  ingestion.py  main.py  test_import.py  test_pipeline_with_ocr.py
database/: db_manager.py
src/: pipeline.cpp
static/: index.html
